crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_generator_comprehension.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
Generator(
    ExprGenerator {
        range: 0..14,
        elt: Name(
            ExprName {
                range: 1..2,
                id: "x",
                ctx: Load,
            },
        ),
        generators: [
            Comprehension {
                range: 3..13,
                target: Name(
                    ExprName {
                        range: 7..8,
                        id: "y",
                        ctx: Store,
                    },
                ),
                iter: Name(
                    ExprName {
                        range: 12..13,
                        id: "z",
                        ctx: Load,
                    },
                ),
                ifs: [],
                is_async: false,
            },
        ],
        parenthesized: true,
    },
)
