crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_if_else_generator_comprehension.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
Generator(
    ExprGenerator {
        range: 0..26,
        elt: If(
            ExprIf {
                range: 1..14,
                test: Name(
                    ExprName {
                        range: 6..7,
                        id: "y",
                        ctx: Load,
                    },
                ),
                body: Name(
                    ExprName {
                        range: 1..2,
                        id: "x",
                        ctx: Load,
                    },
                ),
                orelse: Name(
                    ExprName {
                        range: 13..14,
                        id: "y",
                        ctx: Load,
                    },
                ),
            },
        ),
        generators: [
            Comprehension {
                range: 15..25,
                target: Name(
                    ExprName {
                        range: 19..20,
                        id: "y",
                        ctx: Store,
                    },
                ),
                iter: Name(
                    ExprName {
                        range: 24..25,
                        id: "z",
                        ctx: Load,
                    },
                ),
                ifs: [],
                is_async: false,
            },
        ],
        parenthesized: true,
    },
)
