crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_kwargs.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..32,
            value: Call(
                ExprCall {
                    range: 0..32,
                    func: Name(
                        ExprName {
                            range: 0..7,
                            id: "my_func",
                            ctx: Load,
                        },
                    ),
                    arguments: Arguments {
                        range: 7..32,
                        args: [
                            StringLiteral(
                                ExprStringLiteral {
                                    range: 8..20,
                                    value: StringLiteralValue {
                                        inner: Single(
                                            StringLiteral {
                                                range: 8..20,
                                                value: "positional",
                                                flags: StringLiteralFlags {
                                                    quote_style: Single,
                                                    prefix: Empty,
                                                    triple_quoted: false,
                                                },
                                            },
                                        ),
                                    },
                                },
                            ),
                        ],
                        keywords: [
                            Keyword {
                                range: 22..31,
                                arg: Some(
                                    Identifier {
                                        id: "keyword",
                                        range: 22..29,
                                    },
                                ),
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 30..31,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        },
    ),
]
