crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_lambda_no_args.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..9,
            value: Lambda(
                ExprLambda {
                    range: 0..9,
                    parameters: None,
                    body: NumberLiteral(
                        ExprNumberLiteral {
                            range: 8..9,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        },
    ),
]
