crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_print_hello.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..20,
            value: Call(
                ExprCall {
                    range: 0..20,
                    func: Name(
                        ExprName {
                            range: 0..5,
                            id: "print",
                            ctx: Load,
                        },
                    ),
                    arguments: Arguments {
                        range: 5..20,
                        args: [
                            StringLiteral(
                                ExprStringLiteral {
                                    range: 6..19,
                                    value: StringLiteralValue {
                                        inner: Single(
                                            StringLiteral {
                                                range: 6..19,
                                                value: "Hello world",
                                                flags: StringLiteralFlags {
                                                    quote_style: Single,
                                                    prefix: Empty,
                                                    triple_quoted: false,
                                                },
                                            },
                                        ),
                                    },
                                },
                            ),
                        ],
                        keywords: [],
                    },
                },
            ),
        },
    ),
]
