crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_string.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..13,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..13,
                                value: "Hello world",
                                flags: StringLiteralFlags {
                                    quote_style: Single,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
