crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_tuples.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_suite(source).unwrap()
---
[
    Assign(
        StmtAssign {
            range: 0..11,
            targets: [
                Tuple(
                    ExprTuple {
                        range: 0..4,
                        elts: [
                            Name(
                                ExprName {
                                    range: 0..1,
                                    id: "a",
                                    ctx: Store,
                                },
                            ),
                            Name(
                                ExprName {
                                    range: 3..4,
                                    id: "b",
                                    ctx: Store,
                                },
                            ),
                        ],
                        ctx: Store,
                        parenthesized: false,
                    },
                ),
            ],
            value: Tuple(
                ExprTuple {
                    range: 7..11,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 7..8,
                                value: Int(
                                    4,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 10..11,
                                value: Int(
                                    5,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    parenthesized: false,
                },
            ),
        },
    ),
]
