crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__slice.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
Subscript(
    ExprSubscript {
        range: 0..8,
        value: Name(
            ExprName {
                range: 0..1,
                id: "x",
                ctx: Load,
            },
        ),
        slice: Slice(
            ExprSlice {
                range: 2..7,
                lower: Some(
                    NumberLiteral(
                        ExprNumberLiteral {
                            range: 2..3,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                ),
                upper: Some(
                    NumberLiteral(
                        ExprNumberLiteral {
                            range: 4..5,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                ),
                step: Some(
                    NumberLiteral(
                        ExprNumberLiteral {
                            range: 6..7,
                            value: Int(
                                3,
                            ),
                        },
                    ),
                ),
            },
        ),
        ctx: Load,
    },
)
